Portfolio gran writing text updated & program management images align fixed

--- a/SCSS/pages/portfolio/_base.scss
+++ b/SCSS/pages/portfolio/_base.scss
@@ -256,7 +256,7 @@
             width: 100%;
             overflow: scroll;
             @include flex-between(row);
-            align-items: flex-start;
+            align-items: center;
             padding: 0 2%;
             padding-top: 50px;
 
@@ -360,7 +360,8 @@
     .info-container-programManagement-imgs {
         width: 100%;
         @include flex-center();
-        gap: 20;
+        
+        
     }
 
 
